fix des fleches collapse dans le mauvais sens

--- a/kasa/src/pages/LogementPage.scss
+++ b/kasa/src/pages/LogementPage.scss
@@ -95,10 +95,10 @@
         }
 
         .collapse-icon {
-          transition: transform 0.3s ease;
+          transition: rotate(180deg);
           
           &.rotate {
-            transform: rotate(180deg);
+            transform: rotate(0deg);
           }
         }
       }
